# Jet-Partitioner

./: CMakeLists.txt  ExperimentLoggerUtil.hpp  LICENSE  README.md  contract.hpp  defs.h  heuristics.hpp  import_coarse.cpp  initial_partition.hpp  io.hpp  jet.hpp  jet_refiner.hpp  part_eval.cpp  part_stat.hpp  partition.cpp  setup_gpu.sh  setup_mac.sh  uncoarsen.hpp
configs/: config128_1.txt  config128_10.txt  config128_3.txt  config256_1.txt  config256_10.txt  config256_3.txt  config32_1.txt  config32_10.txt  config32_3.txt  config64_1.txt  config64_10.txt  config64_3.txt  one_config.txt
