cmake_minimum_required(VERSION 3.18)
project(jetpartition CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

#ALL DEVICE BUILDS
find_package(KokkosKernels REQUIRED)
add_compile_options(-O3 -Wall -Wextra -Wshadow)
#add_compile_options(-g -DDEBUG)

add_executable(jet partition.cpp)
add_executable(jet4 partition.cpp)
add_executable(jet2 partition.cpp)
add_executable(jet_host partition.cpp)
add_executable(jet_import import_coarse.cpp)
add_executable(jet_export partition.cpp)
add_executable(jet_serial partition.cpp)
add_executable(pstat part_eval.cpp)

target_compile_definitions(jet PUBLIC HASHMAP_P)
target_compile_definitions(jet4 PUBLIC HASHMAP_P FOUR9)
target_compile_definitions(jet2 PUBLIC HASHMAP_P TWO9)
target_compile_definitions(jet_host PUBLIC HASHMAP_P HOST)
target_compile_definitions(jet_import PUBLIC HASHMAP_P HOST)
target_compile_definitions(jet_export PUBLIC HASHMAP_P HOST EXP)
target_compile_definitions(jet_serial PUBLIC HASHMAP_P SERIAL)
target_link_libraries(jet Kokkos::kokkos Kokkos::kokkoskernels metis)
target_link_libraries(jet4 Kokkos::kokkos Kokkos::kokkoskernels metis)
target_link_libraries(jet2 Kokkos::kokkos Kokkos::kokkoskernels metis)
target_link_libraries(jet_host Kokkos::kokkos Kokkos::kokkoskernels metis)
target_link_libraries(jet_import Kokkos::kokkos Kokkos::kokkoskernels)
target_link_libraries(jet_export Kokkos::kokkos Kokkos::kokkoskernels metis)
target_link_libraries(jet_serial Kokkos::kokkos Kokkos::kokkoskernels metis)
target_link_libraries(pstat Kokkos::kokkos Kokkos::kokkoskernels)
